kcms/regionanglang: explicitly set pt to pt_PT

Explicitly set pt to pt_PT as a workaround for GNU Gettext and CLDR
treating the default dialect of 'pt' differently.

See the discussion on: https://mail.kde.org/pipermail/kde-i18n-doc/2023-January/001340.html

BUG: 454991
FIXED-IN: 5.27